--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <link rel="icon" href="/favicon.ico">
+    <link href="/src/assets/main.css" rel="stylesheet">
+    <title>Servinformación | Dashboard Geoespacial</title>
   </head>
   <body>
     <div id="app"></div>
